# Helix

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DISSONANCE.md  Favorites.csv  HELIX.md  HIL.md  HSL.md  OPERATOR.md  README.md  REBUILD_CHECKPOINT.md  SPEC.md  amendment_firewall_status.txt  core_integrity_status.txt  foobar.txt  helix  helix.py  operator.json  run_hardening_suite.py  run_pipeline.py
.claude/: settings.local.json
00_core/: structural_runtime_dynamics.md
01_protocol/: validate_architecture.py  validate_rings.py
02_governance/: confidence_classes.json  no_silent_drop_scan.py  promotion_gates.py  validate_architecture.py  validate_rings.py
03_forge/: setup_tracks.py
04_labs/: HELIX_LAB_MANIFEST.md  manifest.json  setup_tracks.py
05_atlas/: index.json
06_atlas/: decision_compression.json  index.json  oscillator_locking.json
07_artifacts/: cross_probe_report.json
apps/: runner.py
archive/: README.md
artifacts/: convergence_attack_report.json  element_weights.json  expression_overlay_full.json  expression_scaling_curve.json  hil_command_log.jsonl  k2_external_pack_results.json  last_hil_run.json  llm_intervention_attachability.json  music_audit_report.md  run_manifest.json  structural_debt_report.json  summary_metrics.json
atlas/: atlas_graph.dot  atlas_graph.json  decision_compression.json  index.md
compiler/: atlas_compiler.py
core/: README.md  STRUCTURE.md  eip.py  feasibility.py  irreducibility.py  paths.py  promote.py  schema.json  validate.py
data/: README.md
docs/: ARCHITECTURE.md  HSL.md  (+98 more)
runtime/: pyproject.toml
(+77481 files in other folders)
